Release 2.0 (#12)
* [GS2-8] Display Discounts related to the product (#3)

* feat(api)!: add new endpoint /products/sales and change some bussiness logic

* feat(api): modify ProductDetailsResponseMapper and OpenAPI

* refactor(mapper): update logic for mapping Product from ProductEntity

* feat(api): update product API with new endpoints and modify response mappings

* test: add and update tests for product and discount

* feat(api): update Product DTO and mappers to reflect new response structure

* test: update unit tests for product mappers

* feat(products): update product mappers and controllers

---------

Co-authored-by: Vitalii Fedyk <vfedyk@softserveinc.com>

* feat(cors): add CORS configuration support (#4)

Co-authored-by: Vitalii Fedyk <vfedyk@softserveinc.com>

* chore: fix formatting (#5)

* chore: fix formatting

* chore: format PostAddress

---------

Co-authored-by: Eduard Mytoshop <emytoshop@gmail.com>

* feat: update specification to include prices, discounts, and other fields for orders, cart (#7)

Co-authored-by: Vitalii Fedyk <vfedyk@softserveinc.com>

* chore: fix migration and formatting

* #GS2-49 Add discount support for orders and cart (#8)

* feat(models, database): add new field to OrderItem entity and update business logic in classes related to orders and item cart

* feat(order, cart, product): update discount logic, modify models, and add tests

* refactor(cart): move methods of calculations to CartItem model

* test(cart): update test cases for GetCartItems and UpdateCartItemQuantity use cases

---------

Co-authored-by: Vitalii Fedyk <vfedyk@softserveinc.com>

* fix: resolve product image display issue (#9)

Co-authored-by: Vitalii Fedyk <vfedyk@softserveinc.com>

* Revert "fix: resolve product image display issue (#9)" (#10)

This reverts commit 0cb16ff47f34fe2a91a9c1a8874f14c219313edd.

* #GS2-15 Fix product image display issue (#11)

* fix: resolve product image display issue

* fix: restore V